# PersistentCounter

./: .gitignore  Cargo.toml  README.md  justfile
apple/: project.yml
apple/PersistentCounter/: ContentView.swift  SimpleCounterApp.swift  core.swift
apple/fastlane/: Fastfile  Pluginfile  README.md
shared/: Cargo.toml
shared/src/: app.rs  database.rs  lib.rs
shared/src/capabilities/: database.rs
shared/tests/: database_tests.rs
